<resources>
    <string name="app_name">Spectacle</string>
    <string name="what_do_you_want_to_do">O que deseja fazer?</string>
    <string name="title_category_music">Música</string>
    <string name="title_category_movie">Filmes</string>
    <string name="subtitle_category_music">Veja suas músicas diponíveis</string>
    <string name="subtitle_category_movie">Veja seus filmes diponíveis</string>
    <string name="my_playlist">Minha Playlist</string>
    <string name="add_new_song">Adicionar nova música</string>
    <string name="my_movie_list">Meus Filmes</string>
    <string name="search_music">Procurar na Playlist...</string>
    <string name="search_movie">Procurar em Meus Filmes...</string>
    <string name="facebook_app_id">1040983213384718</string>
    <string name="fb_login_protocol_scheme">fb1040983213384718</string>
    <string name="voltar_ao_inicio">Voltar ao início</string>
    <string name="forgot_password">Esqueci minha senha</string>
    <string name="e_mail">E-mail</string>
    <string name="password">Senha</string>
    <string name="login">Entrar</string>
    <string name="new_user_subscribe_here">Novo por aqui? Inscreva-se agora.</string>
    <string name="title_subscribe">Informe seu email e senha \npara iniciar a assinatura</string>
    <string name="create_account">Crie sua conta</string>
    <string name="subscribe">CADASTRAR</string>
    <string name="name">Nome</string>
    <string name="page_indicator">Page Indicator</string>
    <string name="find">Buscar</string>
    <string name="search_button_description">search_button_description</string>
    <string name="not_found_movie">Esse filme não existe</string>
    <string name="message_not_found_search_again">Não conseguimos encontrar o filme que você procura. Por favor, refaça sua busca.</string>
    <string name="system_fail">O sistema falhou</string>
    <string name="system_fail_try_again">Por algum motivo, não foi possível processar com essa \n solicitação. Por favor, tente novamente.</string>
    <string name="tente_novamente">Tente novamente</string>
    <string name="genre">Genre</string>
    <string name="cover_movie">cover_movie</string>
    <string name="star_icon">star icon</string>
    <string name="_81_percent">%</string>
    <string name="logout">deslogar</string>
    <string name="go_to_home">Ir para a tela incial</string>
</resources>