<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/gradient_background"
    android:orientation="vertical"
    tools:context=".ui.login.FormSubscribe">

    <TextView
        android:id="@+id/app_name"
        style="@style/Title_Main_Activity"
        android:layout_width="wrap_content"
        android:layout_height="70dp"
        android:layout_gravity="center"
        android:layout_marginVertical="@dimen/margin_24"
        android:letterSpacing="0.07"
        android:src="@drawable/ic_spectacle"
        android:text="@string/app_name"
        android:textAllCaps="true" />


    <TextView
        style="@style/Title_Main_Activity"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="24dp"
        android:text="@string/title_subscribe"
        android:textAllCaps="false" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="24dp"
        android:text="@string/create_account"
        android:textAllCaps="false"
        android:textColor="@color/black"
        android:textSize="22sp"
        android:textStyle="bold" />

    <EditText
        android:id="@+id/edit_name"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="24dp"
        android:layout_marginTop="20dp"
        android:layout_marginEnd="24dp"
        android:background="@drawable/edit_text_subscribe"
        android:hint="@string/name"
        android:importantForAutofill="no"
        android:inputType="textPersonName"
        android:maxLines="1"
        android:padding="20dp"
        android:textColor="@color/black"
        android:textColorHint="@color/blue"
        android:textSize="18sp" />

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="60dp"
        android:layout_marginStart="@dimen/margin_24"
        android:layout_marginTop="10dp"
        android:layout_marginEnd="@dimen/margin_24"
        android:background="@drawable/edit_text_subscribe"
        tools:context=".DatePickerActivity">

        <EditText
            android:id="@+id/billDate_editText_billUpload"
            android:layout_width="0dp"
            android:layout_height="43dp"
            android:layout_margin="8dp"
            android:backgroundTint="@color/white"
            android:ems="10"
            android:focusable="false"
            android:importantForAutofill="no"
            android:inputType="none"
            android:text=""
            android:textColor="@color/blue"
            android:textSize="18sp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            tools:ignore="TextFields" />

    </androidx.constraintlayout.widget.ConstraintLayout>

    <EditText
        android:id="@+id/edit_email"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="24dp"
        android:layout_marginTop="10dp"
        android:layout_marginEnd="24dp"
        android:background="@drawable/edit_text_subscribe"
        android:hint="@string/e_mail"
        android:inputType="textEmailAddress"
        android:maxLines="1"
        android:padding="20dp"
        android:textColor="@color/black"
        android:textColorHint="@color/blue"
        android:textSize="18sp"
        android:autofillHints="emailAddress" />

    <EditText
        android:id="@+id/edit_password"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="24dp"
        android:layout_marginTop="10dp"
        android:layout_marginEnd="24dp"
        android:background="@drawable/edit_text_subscribe"
        android:hint="@string/password"
        android:importantForAutofill="no"
        android:inputType="numberPassword"
        android:maxLines="1"
        android:padding="20dp"
        android:textColor="@color/black"
        android:textColorHint="@color/blue"
        android:textSize="18sp" />

    <Button
        android:id="@+id/btn_subscribe"
        style="@style/Button_Login_Subscribe"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="24dp"
        android:padding="15dp"
        android:text="@string/subscribe"
        app:cornerRadius="10dp"
        app:strokeColor="@color/purple_700"
        app:strokeWidth="2dp" />

    <TextView
        android:id="@+id/message_error_subscribe"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:text=""
        android:textColor="@color/purple_700"
        android:textSize="18sp"
        android:textStyle="bold" />

</LinearLayout>