<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/gradient_background"
    tools:context=".HomeActivity">

    <ImageButton
        android:id="@+id/log_out"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/margin_8"
        android:layout_marginEnd="@dimen/margin_8"
        android:background="@color/blue"
        android:src="@drawable/ic_baseline_logout_24"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/app_name"
        style="@style/Title_Main_Activity"
        android:layout_width="wrap_content"
        android:layout_height="70dp"
        android:layout_marginTop="@dimen/margin_24"
        android:letterSpacing="0.07"
        android:src="@drawable/ic_spectacle"
        android:text="@string/app_name"
        android:textAllCaps="true"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/log_out" />

    <TextView
        android:id="@+id/title_home"
        style="@style/Title_Main_Activity"
        android:layout_width="wrap_content"
        android:layout_height="80dp"
        android:src="@drawable/ic_spectacle"
        android:text="@string/what_do_you_want_to_do"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/app_name" />

    <androidx.cardview.widget.CardView
        android:id="@+id/my_playlist"
        android:layout_width="330dp"
        android:layout_height="80dp"
        android:background="@color/white"
        android:backgroundTint="@color/white"
        android:orientation="vertical"
        app:cardCornerRadius="50dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/title_home">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <ImageView
                android:id="@+id/image_music"
                android:layout_width="60dp"
                android:layout_height="50dp"
                android:layout_margin="@dimen/margin_16"
                android:src="@drawable/ic_baseline_video_24"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <TextView
                android:id="@+id/title_category_music"
                style="@style/Category_Movie_Music"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@drawable/ic_spectacle"
                android:text="@string/title_category_music"
                app:layout_constraintStart_toEndOf="@+id/image_music"
                app:layout_constraintTop_toTopOf="@+id/image_music" />

            <TextView
                style="@style/Subtitle_Artist_Music"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@drawable/ic_spectacle"
                android:text="@string/subtitle_category_music"
                app:layout_constraintStart_toEndOf="@+id/image_music"
                app:layout_constraintTop_toBottomOf="@+id/title_category_music" />

        </androidx.constraintlayout.widget.ConstraintLayout>
    </androidx.cardview.widget.CardView>

    <androidx.cardview.widget.CardView
        android:id="@+id/my_movies"
        android:layout_width="330dp"
        android:layout_height="80dp"
        android:layout_marginTop="@dimen/margin_24"
        android:background="@color/white"
        android:backgroundTint="@color/white"
        android:orientation="vertical"
        app:cardCornerRadius="50dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/my_playlist">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <ImageView
                android:id="@+id/image_movie"
                android:layout_width="60dp"
                android:layout_height="50dp"
                android:layout_margin="@dimen/margin_16"
                android:src="@drawable/ic_baseline_music_24"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <TextView
                android:id="@+id/title_category_movie"
                style="@style/Category_Movie_Music"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@drawable/ic_spectacle"
                android:text="@string/title_category_movie"
                app:layout_constraintStart_toEndOf="@+id/image_movie"
                app:layout_constraintTop_toTopOf="@+id/image_movie" />

            <TextView
                style="@style/Subtitle_Artist_Music"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@drawable/ic_spectacle"
                android:text="@string/subtitle_category_movie"
                app:layout_constraintStart_toEndOf="@+id/image_movie"
                app:layout_constraintTop_toBottomOf="@+id/title_category_movie" />

        </androidx.constraintlayout.widget.ConstraintLayout>
    </androidx.cardview.widget.CardView>
</androidx.constraintlayout.widget.ConstraintLayout>